<resources>
    <string name="app_name">Week1Weekend-Calculator2</string>
    <string name="string1">1</string>
    <string name="string2">2</string>
    <string name="string3">3</string>
    <string name="string4">4</string>
    <string name="string5">5</string>
    <string name="string6">6</string>
    <string name="string7">7</string>
    <string name="string8">8</string>
    <string name="string9">9</string>
    <string name="stringadd">+</string>
    <string name="stringsubstract">-</string>
    <string name="stringmultiplication">*</string>
    <string name="stringdivision">/</string>
    <string name="stringdot">.</string>
    <string name="string0">0</string>
    <string name="stringequals">=</string>
    <string name="stringsqrt">√</string>
</resources>
